Version 1.0
- ADD: New option in the settings dialog to set the 
       filetimes to the last commit time. This solves
       issue 83. (Stefan)
- ADD: From the log dialog it's now possible to start
       the repository browser so it browses the
       selected revision. (Stefan)
- ADD: New button in the settings dialog to open
       the subversion config file with the default
       text editor. (Stefan)
- ADD: Implement Issue 87. TortoiseMerge shows now
       the filename and the revision in the viewtitle.
       TME gets this information from TSVN. (Stefan)
- ADD: The repository browser now allows the selection
       of more than one item. With this, the user can
       now select two files/folders from different
       urls (e.g. trunk and tags) and request a diff
       from them. (Stefan)
- ADD: Implement a "Delete" command in the context menu of 
       the commit dialog for unversioned files. (Stefan)
- ADD: TortoiseMerge can now handle UTF8 files. (Stefan)
- ADD: Selecting of lines and copying them to the
       clipboard in TortoiseMerge. (Stefan)
- CHG: Use of an iterator to gather all the files
       needed for import/commit/add. This saves a lot
       of memory and is also a big speedup for large
       directories. (Jon Foster)
- CHG: The log message editboxes now do "soft-wrap",
       i.e. the logmessage is wrapped at the right
       end of the dialog box. (Stefan)
- CHG: "Show unversioned files before committing" is now
       enabled by default. (Stefan)
- BUG: In TME it was not possible to select a diff block
       completely if it started at the first line. (Stefan)
- BUG: Creating a branch/tag from a modified working
       copy did not include the changes from the
       working copy! (Stefan)
- BUG: In the Commit and the Add dialog: if a file was
       selected then only the topmost parentfolder was
       automatically selected instead of all intermediant
       parentfolders. (Stefan)